Add local performance results graph/table generation

--- a/playground/paper/paper.tex
+++ b/playground/paper/paper.tex
@@ -63,7 +63,6 @@
 \usepackage{tikz}
 \usepackage{amsmath}
 
-\usepackage{drawstack}
 \usepackage{todonotes}
 \usepackage{verbatim}
 
@@ -74,8 +73,6 @@
 
 \hyphenation{op-tical net-works semi-conduc-tor}
 \usepackage{amsmath,amssymb,amsfonts}
-\usepackage{algorithmic}
-\usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage{xspace}
@@ -192,11 +189,11 @@ evaluation for \tech as follows: LMBEnch syscall overhead (see Section),
 LMBench bandwidth overheads (see Section), OSBench and Phoronix.
 For each benchmark the artifact will compute the results from the paper (using our 
 collected raw data).
-Additionally, if the evaluator runs the artifact additional tables/graphs showing 
+Additionally, if the evaluator runs the artifact, additional tables/graphs showing 
 the results obtained locally on the evaluator's machine are shown alongside the 
 results in the paper.
-For this, the evaluator must at least run the performance evaluation for SafeFetch (default
-configuration on it's machine.
+For this, the evaluator must at least run the performance evaluation for SafeFetch (default)
+configuration on her/his machine.
 The evaluator can additionally run the whitelist and/or midas configuration to obtain the 
 respective results on her/his machine.
 \subsection{LMBench syscall performance results}
