--- a/playground/paper/paper.tex
+++ b/playground/paper/paper.tex
@@ -223,7 +223,7 @@ respective results on her/his machine.
 \subsection{LMBench bandwidth results}
 
 \begin{table}[!h]
-  \caption{LMBench latency results (from the main paper).}
+  \caption{LMBench bandwidth results (from the main paper).}
   \begin{center}
   \resizebox{0.5\columnwidth}{!}{%
   \input{tables/lmbench_bandwidth_1}
@@ -270,7 +270,39 @@ respective results on her/his machine.
   \label{fig:phoronixosbench}
   \end{figure*}
 
+\newpage
 \section{Security Artifact}
+In the following subsection the evaluator can see the number of reproductions of \texttt{CVE-2016-6516} 
+across 11 iterations when running the artifact on a baseline kernel (that doesn't use SafeFetch) and on a 
+SafeFetch protected kernel.
+Additionally we also show the average per-iteration reproductions of the bug.
+The evaluator must initially run the security artifact on it's local machine as 
+explained in the artifact description (without running the artifact only the table headers are generated).
+On a baseline kernel the \textbf{Reproductions} column should be non-zero, signaling that the CVE was 
+reproduced.
+Conversely, on a SafeFetch protected kernel the \textbf{Reproductions} column should only contain zeroes
+which signals that SafeFetch is able to thwart the bug.
+
+\begin{table}[!h]
+  \caption{\texttt{CVE-2016-6516} reproductions across 11 iterations. (baseline kernel)}
+  \begin{center}
+  \resizebox{0.25\columnwidth}{!}{%
+  \input{tables/security_baseline.tex}
+  %
+  }
+\end{center}
+\label{tab:security-baseline-local}
+\end{table}
+\begin{table}[!h]
+  \caption{\texttt{CVE-2016-6516} reproductions across 11 iterations. (kernel defended with SafeFetch)}
+  \begin{center}
+  \resizebox{0.25\columnwidth}{!}{%
+  \input{tables/security_safefetch.tex}
+  %
+  }
+\end{center}
+\label{tab:security-safefetch-local}
+\end{table}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
